# cesrox

./: Cargo.toml  README.md
.github/workflows/: publish-cesr.yml  publish-cesrox.yml  publish-sad_macros.yml  publish-said.yml  publish.yml
cesr/: .gitignore  Cargo.toml  README.md
cesr/src/: conversion.rs  derivation_code.rs  error.rs  lib.rs  universal_codes.rs  value.rs  variable_length.rs
cesr/src/cesr_proof/: codes.rs  mod.rs  parsers.rs
cesr/src/group/: codes.rs  mod.rs  parsers.rs
cesr/src/payload/: message.rs  mod.rs
cesr/src/primitives/: mod.rs  parsers.rs
cesr/src/primitives/codes/: attached_signature_code.rs  basic.rs  mod.rs  rand_128.rs  seed.rs  self_addressing.rs  serial_number.rs  timestamp.rs
cesr/tests/: client.rs
sai/: Cargo.toml  README.md
sai/src/: cesr_adapter.rs  error.rs  lib.rs  sad.rs
sai/src/derivation/: digest.rs  mod.rs
sai/tests/: derivation_test.rs
said/: Cargo.toml  README.md
said/sad_macros/: .gitignore  Cargo.toml
said/sad_macros/src/: derivation.rs  field.rs  lib.rs  version.rs
said/src/: cesr_adapter.rs  error.rs  lib.rs  sad.rs
said/src/derivation/: digest.rs  mod.rs
said/src/sad/: mod.rs
said/src/version/: error.rs  format.rs  mod.rs  parse.rs
said/tests/: derivation_test.rs  sad_test.rs  sad_version_test.rs
src/: group.rs  lib.rs  parsing.rs  path.rs  primitives.rs  value.rs
src/codes/: attached_signature_code.rs  basic.rs  group.rs  material_path_codes.rs  mod.rs  seed.rs  self_addressing.rs  self_signing.rs  serial_number.rs  timestamp.rs
src/group/: codes.rs  mod.rs  parsers.rs
src/parsers/: group.rs  mod.rs  primitives.rs
src/path/: codes.rs  mod.rs  parsers.rs
src/payload/: message.rs  mod.rs
src/primitives/: mod.rs  parsers.rs
src/primitives/codes/: attached_signature_code.rs  basic.rs  mod.rs  seed.rs  self_addressing.rs  self_signing.rs  serial_number.rs
tests/: client.rs
version/: Cargo.toml  README.md
version/src/: error.rs  lib.rs  serialization_info.rs
version/tests/: version_test.rs
