[package]
name = "cesrox"
version = "0.1.7"
edition = "2021"
description = "Implementation of Composable Event Streaming Representation (CESR)"
license = "EUPL-1.2"
keywords = ["keri", "dkms", "cesr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cesr-proof = []

[dependencies]
base64 = "0.13"
nom = "7"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
serde_cbor = "0.11.1"
rmp-serde = "1.1.1"

[dev-dependencies]
hex = "0.4.3"
ed25519-dalek = "1.0.1"
