[package]
name = "said"
version = "0.3.0"
edition = "2021"
description = "Self-Addressing identifier library"
license = "EUPL-1.2"

[features]
macros = ["sad_macros"]

[dependencies]
# cesrox = {path = "../cesr"}
cesrox = "0.1.4"
blake2 = "0.9.1"
blake3 = { version = "1", default-features = false }
sha2 = "0.9.3"
sha3 = "0.9.1"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = "3.0.0-beta.4"

# sad_macros = { path = "sad_macros", optional = true }
sad_macros = { version = "0.1.0", optional = true }

serde_json = "1.0"
serde_cbor = "0.11.2"
serde_derive = "1.0.152"
rmp-serde = "0.15"
nom = "7"

