[package]
name = "said"
version = "0.5.0"
edition = "2021"
description = "Self-Addressing identifier library"
license = "EUPL-1.2"

[features]
macros = ["sad_macros"]
file = []

[dependencies]
cesrox = {path = "../cesr"}
blake2 = "0.10.6"
blake3 = { version = "1", default-features = false }
sha2 = "0.10.9"
sha3 = "0.10.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
clap = "4.5.52"

# sad_macros = { path = "./sad_macros", optional = true }
sad_macros = { version = "0.2.0", optional = true }

serde_json = "1.0"
serde_cbor = "0.11.2"
serde_derive = "1.0.152"
rmp-serde = "1.3"
nom = "8"
indexmap = {version = "2.3.0", features= ["serde"]}

